--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "version": "1.0.0",
     "description": "A progress tracker MVP with React and TypeScript",
     "main": "dist/bundle.js",
+    "homepage": "https://AhmadSaeedZaidi.github.io/progress-tracker",
     "scripts": {
         "start": "webpack serve --mode development",
-        "build": "webpack --mode production"
+        "build": "webpack --mode production",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "keywords": [
         "progress",
@@ -27,6 +30,7 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "css-loader": "^6.7.3",
+        "gh-pages": "^6.3.0",
         "html-webpack-plugin": "^5.5.0",
         "sass": "^1.89.2",
         "sass-loader": "^16.0.5",
@@ -35,6 +39,6 @@
         "typescript": "^5.0.0",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1"
+        "webpack-dev-server": "^5.2.2"
     }
 }
